backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service-backend
  template:
    metadata:
      labels:
        app: email-service-backend
    spec:
      containers:
      - name: email-service-backend
        image: 40781998/email-service-backend:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8000
