backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-service-backend
  type: 
spec:
  type: LoadBalancer
  selector:
    app: email-service-backend
  ports:
  - port: 8000
    targetPort: 8000
