pg-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  type: LoadBalancer
  selector:
    app: pgadmin
  ports:
  - port: 80
    targetPort: 8001
